# downtime-platform

./: .coverage  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  cache.py  cities.py  config.py  main.py  models.py  observability.py  package-lock.json  pyproject.toml  release-please-config.json  requirements.txt  scoring.py  sentry_init.py  tailwind.config.ts  taste-profile.json
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: fetch-events.yml  test.yml
backend/: .env.example  CONTRIBUTING.md  README.md  config.py  main.py  models.py  observability.py  requirements.txt  sentry_init.py
backend/.github/workflows/: fetch-events.yml
backend/fetchers/: __init__.py  serpapi_google.py
backend/scripts/: fetch_all_cities.py
client/: index.html
client/public/: data.json  manifest.json  privacy-policy.html
client/public/.well-known/: assetlinks.json
client/src/: App.tsx  index.css
client/src/components/: EventCard.tsx  Navigation.tsx
client/src/lib/: data.ts  store.ts  types.ts  utils-app.ts
config/: .gitignore  .pre-commit-config.yaml
config/client/: index.html
config/server/: routes.ts
config/shared/: schema.ts
docs/: README.md
fetchers/: __init__.py  opentripmap.py  seatgeek.py  serpapi_google.py  ticketmaster.py
frontend/: CONTRIBUTING.md  package.json
frontend/.github/: dependabot.yml
frontend/client/: index.html
scripts/: fetch_all_cities.py
server/: routes.ts  storage.ts
shared/: schema.ts
tests/: test_backend_smoke.py  test_config_validation.py
(+22 files in other folders)
