[project]
name = "downtime-platform"
version = "0.1.0"
requires-python = ">=3.12"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["backend"]

[tool.coverage.run]
source = ["backend"]
omit = [
    "tests/*",
    "frontend/*",
    "config/*",
    "backend/fetchers/*",
]

[tool.coverage.report]
fail_under = 50
show_missing = true

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
